[project]
name = "AlienInvasion"
description = "2D arcade Python-based game using pygame"
version = "1.0.0"
dependencies = ["pygame"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Mahan Rafieenaini", email = "mahanrn@student.ubc.ca"},
]

[project.urls]
HomePage = "https://github.com/Mahan-RN/Alien-Invasion"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
typeCheckingMode = "basic"
stubPath = "src/stubs"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
pythonVersion = "3.13"
pythonPlatform = "Windows"
executionEnvironments = [
  { root = "src" },
  { root = "tests" }
]